<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
    android:id="@+id/item_food"
    android:checkable="true"
    android:title="@string/food_and_dining"
    />
    <item
        android:id="@+id/item_fashion"
        android:checkable="true"
        android:title="@string/fashion_stores"
        />
    <item
        android:id="@+id/item_beauty"
        android:checkable="true"
        android:title="@string/beauty_and_health"
        />
    <item
        android:id="@+id/item_entertainment"
        android:checkable="true"
        android:title="@string/entertainment"
        />
    <item
        android:id="@+id/item_home"
        android:checkable="true"
        android:title="@string/home_decor"
        />
    <item
        android:id="@+id/item_tech"
        android:checkable="true"
        android:title="@string/tech_stores"
        />
    <item
        android:id="@+id/item_gifts"
        android:checkable="true"
        android:title="@string/gift_shops"
        />
    <item
        android:id="@+id/item_jewellery"
        android:checkable="true"
        android:title="@string/jewellery_stores"
        />
    <item
        android:id="@+id/item_sports"
        android:checkable="true"
        android:title="@string/sports_and_fitness"
        />
    <item
        android:id="@+id/item_books"
        android:checkable="true"
        android:title="@string/books_and_stationary"
        />
</menu>